@@ -1,3 +1,12 @@
+2010-06-30  Per Bothner  <per@bothner.com>
+
+	* FilterConsumer.java: Change to implement XConsumer.
+	(writeComment, writeCDATA, beginEntity, endEntity): New methods.
+	(before): New empty method to provide override hook.
+
+	* FilterConsumer.java: (append(CharSequence,int,int),
+	append(CharSequence)):  Re-implement to call write method.
+
 2010-06-21  Per Bothner  <per@bothner.com>
 
 	* ByteVector.java: New abstract class, extends SimpleVector.
